--- a/Server/templates/worker.html
+++ b/Server/templates/worker.html
@@ -4,9 +4,10 @@
 	
 	<!-- just a test -->
 	
+	<script  src="static/json2.js"></script>
 	<script  src="static/push.js"></script>
 	<script  src="static/jquery-1.3.2.min.js"></script>
-	<script  src="static/pushgp.js"></script>
+    <!-- // <script  src="static/pushgp.js"></script> -->
 	<!-- // <script type="text/javascript" src="trygp.js"></script> -->
 	<script src="static/gp_controller.js"></script>
 	<script src="static/gp_brain.js"></script>
