islands, heartbeats, other nifty things

--- a/Server/templates/worker.html
+++ b/Server/templates/worker.html
@@ -18,7 +18,7 @@
 		function()
 		{
 			$('#gpChart').hide();
-			startGPBrain({{ worker_id }},"{{ client_id }}");
+			startGPBrain("{{ client_id }}");
 
 		});
 
